2014-08-22      3.0002  Be more consistent when formatting UK numbers
                          for which we have incomplete data from OFCOM,,
                          no matter how they're instantiated;
                        New UK allocations

2014-06-17      3.0001  Make N::P::UK->format() cope better when OFCOM
                          don't tell us how long 08 numbers are;
                        New UK allocations

2014-04-25      3.0     Add Number::Phone::Lib, a libphonenumber-compatible
                          subclass. This lacks some functionality but is
                          considerably faster (for UK numbers) and compatible
                          (for non-geographic NANP numbers);
                        Add some new CA/US area codes;
                        Add more GMSS codes;
                        Use libphonenumber data for some NANP countries (some
                          have dodgy data*) for is_mobile, is_fixed_line

* Some countries have duplicate regexes for fixed_line/mobile in libphonenumber,
  and others have regexes that match the same data

2014-04-15      2.2003  Bugfix to tighten up length checking for
                          unallocated UK numbers;
                        New UK allocations

2013-07-04      2.2002  New UK allocations

2012-11-29      2.2001  Bugfix to avoid using broken third-party
                          Number::Phone::* modules that aren't proper
                          sub-classes;
                        New UK allocations

2012-11-21      2.2     Bugfix stub countries to not have random \ in
                          area names;
                        Minor doco fix "from Number::Phone::UK, it would
                          return DE" is obviously wrong;
                        Some stuff in stubs for the breakup of the
                          Dutch colonies in the Caribbean;
                        New UK allocations;